--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python project to Azure Function App - AUB-InvoiceProcessor
+name: Build and deploy Python project to Azure Function App - ssc-api
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'PRODUCTION'
       url: ${{ steps.deploy-to-function.outputs.webapp-url }}
 
     steps:
