--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'ssc-api' # set this to your application's name
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'   # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './api'   # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.9'                 # set this to the Python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
